--- a/Examples/jupyter_notebooks/00_Enhancing_the_ZOS_API_Interface.ipynb
+++ b/Examples/jupyter_notebooks/00_Enhancing_the_ZOS_API_Interface.ipynb
@@ -269,13 +269,13 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "To complete ..."
+   ]
   },
   {
    "cell_type": "code",
