--- a/Examples/jupyter_notebooks/00_Enhancing_the_ZOS_API_Interface.ipynb
+++ b/Examples/jupyter_notebooks/00_Enhancing_the_ZOS_API_Interface.ipynb
@@ -53,7 +53,7 @@
    "source": [
     "# Set this variable to True or False to use ZOS API with  \n",
     "# the PyZOS library or without it respectively.\n",
-    "USE_PYZOS = True"
+    "USE_PYZOS = False"
    ]
   },
   {
@@ -110,15 +110,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pyzos.zosutils.IZOSAPI_Application object at 0x0000000017DA5438>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if USE_PYZOS:\n",
     "    print(osys.pTheApplication)"
@@ -188,16 +180,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\PROGRAMSANDEXPERIMENTS\\PYTHON\\OPTICS\\PyZOS\\pyzos\\zosutils.py:149: UserWarning: No module isdaperturedata_methods found\n",
-      "  exec(module_import_str, globals(), cdict)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Aperture\n",
     "if USE_PYZOS:\n",
@@ -227,14 +210,6 @@
      "output_type": "stream",
      "text": [
       "Number of fields =  2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\PROGRAMSANDEXPERIMENTS\\PYTHON\\OPTICS\\PyZOS\\pyzos\\zosutils.py:149: UserWarning: No module ifield_methods found\n",
-      "  exec(module_import_str, globals(), cdict)\n"
      ]
     }
    ],
@@ -291,16 +266,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\PROGRAMSANDEXPERIMENTS\\PYTHON\\OPTICS\\PyZOS\\pyzos\\zosutils.py:149: UserWarning: No module iwavelengths_methods found\n",
-      "  exec(module_import_str, globals(), cdict)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Setting wavelength using wavelength preset\n",
     "if USE_PYZOS:\n",
@@ -322,7 +288,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "PyZOS allows us to easily extend the functionality of any ZOS API object by adding custom methods and properties, supporting the idea of developing a useful library over time. "
+    "PyZOS allows us to easily extend the functionality of any ZOS API object by adding custom *methods* and *properties*, supporting the idea of developing a useful library over time. In the following block of codes we have added custom methods `zInsertNewSurfaceAt()` and `zSetSurfaceData()` to the `OpticalSystem` ojbect. \n",
+    "\n",
+    "(Please note there is <u>no</u> implication that one cannot build a common set of *functions* without using PyZOS. Here, we only show that PyZOS allows us to add *methods* to the ZOS objects. How to add new *methods* PyZOS objects will be explained later.) "
    ]
   },
   {
@@ -360,12 +328,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The custom functions are introspectable and are identified by the prefix <font color='magenta'><b>z</b></font> to their names as shown in the following figure."
+    "The custom functions are introspectable, and they are identified by the prefix <font color='magenta'><b>z</b></font> to their names as shown in the following figure."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -377,7 +345,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,17 +358,88 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Setting solves - Make thickness and radii variable\n",
+    "# nothing to demonstrate in particular in this block of code\n",
+    "\n",
+    "if USE_PYZOS:\n",
+    "    osys.pLDE.GetSurfaceAt(1).pThicknessCell.MakeSolveVariable()\n",
+    "    osys.pLDE.GetSurfaceAt(2).pRadiusCell.MakeSolveVariable()\n",
+    "    osys.pLDE.GetSurfaceAt(2).pThicknessCell.MakeSolveVariable()\n",
+    "    osys.pLDE.GetSurfaceAt(3).pThicknessCell.MakeSolveVariable()\n",
+    "else:\n",
+    "    surf1.ThicknessCell.MakeSolveVariable()\n",
+    "    surf2.RadiusCell.MakeSolveVariable()\n",
+    "    surf2.ThicknessCell.MakeSolveVariable()\n",
+    "    surf3.ThicknessCell.MakeSolveVariable()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Setting up the default merit function \n",
+    "mfe = osys.MFE\n",
+    "wizard = mfe.SEQOptimizationWizard\n",
+    "wizard.Type = 0          # RMS\n",
+    "wizard.Data = 1          # Spot Radius\n",
+    "wizard.Reference = 0     # Centroid\n",
+    "wizard.Ring = 2          # 3 Rings\n",
+    "wizard.Arm = 0           # 6 Arms\n",
+    "wizard.IsGlassUsed = True\n",
+    "wizard.GlassMin = 3\n",
+    "wizard.GlassMax = 15\n",
+    "wizard.GlassEdge = 3\n",
+    "wizard.IsAirUsed = True\n",
+    "wizard.AirMin = 0.5\n",
+    "wizard.AirMax = 1000\n",
+    "wizard.AirEdge = 0.5\n",
+    "wizard.IsAssumeAxialSymmetryUsed = True\n",
+    "wizard.CommonSettings.OK()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <font color='#005078'>5. Proper casting of objects can be managed by PyZOS</font>"
-   ]
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -426,33 +465,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "# Setting solves - Made thickness and radii variable\n",
-    "surf1.ThicknessCell.MakeSolveVariable()\n",
-    "surf2.RadiusCell.MakeSolveVariable()\n",
-    "surf2.ThicknessCell.MakeSolveVariable()\n",
-    "surf3.ThicknessCell.MakeSolveVariable()\n",
-    "\n",
-    "# Setting up the default merit function \n",
-    "mfe = osys.MFE\n",
-    "wizard = mfe.SEQOptimizationWizard\n",
-    "wizard.Type = 0          # RMS\n",
-    "wizard.Data = 1          # Spot Radius\n",
-    "wizard.Reference = 0     # Centroid\n",
-    "wizard.Ring = 2          # 3 Rings\n",
-    "wizard.Arm = 0           # 6 Arms\n",
-    "wizard.IsGlassUsed = True\n",
-    "wizard.GlassMin = 3\n",
-    "wizard.GlassMax = 15\n",
-    "wizard.GlassEdge = 3\n",
-    "wizard.IsAirUsed = True\n",
-    "wizard.AirMin = 0.5\n",
-    "wizard.AirMax = 1000\n",
-    "wizard.AirEdge = 0.5\n",
-    "wizard.IsAssumeAxialSymmetryUsed = True\n",
-    "wizard.CommonSettings.OK()\n",
-    "\n",
+    "# Add operand\n",
     "operand1 = mfe.InsertNewOperandAt(1)\n",
     "operand1.ChangeType(constants.MeritOperandType_EFFL)\n",
     "operand1.Target = 400.0\n",
@@ -475,12 +488,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# save\n",
+    "osys.Save()\n",
+    "app.CloseApplication()"
+   ]
   },
   {
    "cell_type": "code",
@@ -490,6 +507,22 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color='#005078'>5. Proper casting of objects can be managed by PyZOS</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### <font color='#005078'>6. Wrap objects that are not yet wrapped in PyZOS</font>"
+   ]
   },
   {
    "cell_type": "code",
