Improved description of the features and purpose

--- a/Examples/jupyter_notebooks/00_Enhancing_the_ZOS_API_Interface.ipynb
+++ b/Examples/jupyter_notebooks/00_Enhancing_the_ZOS_API_Interface.ipynb
@@ -62,23 +62,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='#008000'>Enhancements</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### <font color='#005078'>1. Visible UI for the headless standalone ZOS-API COM application</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The PyZOS library provides two functions `zPushLens()` and `zGetRefresh()` whose function is to copy the lens from the headless ZOS COM server to the running UI and from the running UI to the headless ZOS COM server respectively. \n",
+    "## <font color='#008000'>Enhancements and capabilities provided by PyZOS</font>\n",
     "\n",
-    "However, in order to use these features the `OpticalSystem` has to be instantiated with the parameter `sync_ui` set to `True` (see the screen-shot video).\n",
+    "\n",
+    "1. [Visible user-interface for the headless standalone ZOS-API COM application](#1.-Visible-user-interface-for-the-headless-standalone-ZOS-API-COM-application)\n",
+    "2. [Single-step initialization of ZOS API Interface and instantiation of an Optical System](#2.-Single-step-initialization-of-ZOS-API-Interface-and-instantiation-of-an-Optical-System)\n",
+    "3. [Introspection of properties of ZOS objects on Tab press](#3.--Introspection-of-properties-of-ZOS-objects-on-Tab-press)\n",
+    "4. [Ability to override methods of existing ZOS objects](#4.-Ability-to-override-methods-of-existing-ZOS-objects)\n",
+    "5. [Tab completion and introspection of API constants](#5.-Tab-completion-and-introspection-of-API-constants)\n",
+    "6. [Ability to add custom methods and properties to any ZOS-API object](#6.-Ability-to-add-custom-methods-and-properties-to-any-ZOS-API-object)\n",
+    "7. [Wrap objects that are not yet wrapped in PyZOS](#7.-Wrap-objects-that-are-not-yet-wrapped-in-PyZOS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color='#005078'>1. Visible user-interface for the headless standalone ZOS-API COM application</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The PyZOS library provides two functions: \n",
+    "\n",
+    "* `zPushLens()` -- for copying a lens from the headless ZOS COM server (invisible) to a running user-interface application (visible), and \n",
+    "* `zGetRefresh()`-- for copying a lens from the running user-interface application (visible) to the headless ZOS COM server (invisible).\n",
+    "\n",
+    "These two functions enables one to interact with a running OpticStudio user-interface. \n",
+    "\n",
+    "To enable this feature, the `OpticalSystem` class is instantiated with the parameter `sync_ui` set to `True` (see the screen-shot video below).\n",
     "\n",
     "\n",
     "\n",
@@ -124,7 +138,7 @@
     "collapsed": true
    },
    "source": [
-    "### <font color='#005078'>2. Initialization of ZOS API Interface and instantiation of an Optical System</font>"
+    "### <font color='#005078'>2. Single-step initialization of ZOS API Interface and instantiation of an Optical System</font>"
    ]
   },
   {
@@ -239,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <font color='#005078'>4. Ability to override methods of ZOS objects</font>"
+    "### <font color='#005078'>4. Ability to override methods of existing ZOS objects</font>"
    ]
   },
   {
