Mechanism to turn on sync-with-ui feature at any time
Added method to `OpticalSystem` to allow turning on sync-with-ui feature
anytime after instantiation of the object.

--- a/Examples/jupyter_notebooks/00_Enhancing_the_ZOS_API_Interface.ipynb
+++ b/Examples/jupyter_notebooks/00_Enhancing_the_ZOS_API_Interface.ipynb
@@ -85,14 +85,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The PyZOS library provides two functions: \n",
+    "The PyZOS library provides three functions (instance methods of `OpticalSystem`) for sync-with-ui mechanism: \n",
     "\n",
     "* `zPushLens()` -- for copying a lens from the headless ZOS COM server (invisible) to a running user-interface application (visible), and \n",
     "* `zGetRefresh()`-- for copying a lens from the running user-interface application (visible) to the headless ZOS COM server (invisible).\n",
     "\n",
     "These two functions enables one to interact with a running OpticStudio user-interface. \n",
     "\n",
-    "To enable this feature, the `OpticalSystem` class is instantiated with the parameter `sync_ui` set to `True` (see the screen-shot video below).\n",
+    "The sync-with-ui mechanism may be turned on in two ways -- (1) during the instantiation of the `OpticalSystem` object using the parameter `sync_ui` set to `True` (see the screen-shot video below) or (2) using using the method `zSyncWithUI` of the `OpticalSystem` instance at other time.\n",
     "\n",
     "\n",
     "\n",
