intermediate code (auto-wrapping of methods not complete yet)

--- a/Examples/jupyter_notebooks/00_Enhancing_the_ZOS_API_Interface.ipynb
+++ b/Examples/jupyter_notebooks/00_Enhancing_the_ZOS_API_Interface.ipynb
@@ -120,7 +120,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x1564f198>"
+       "<IPython.lib.display.YouTubeVideo at 0x16b79978>"
       ]
      },
      "metadata": {},
@@ -187,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<pyzos.zosutils.IZOSAPI_Application object at 0x00000000154F8D30>\n"
+      "<pyzos.zosutils.IZOSAPI_Application object at 0x0000000016B8F278>\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -247,6 +247,28 @@
     "    sdir = osys.pTheApplication.pSamplesDir\n",
     "else:\n",
     "    sdir = osys.TheApplication.SamplesDir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'C:\\\\Users\\\\Indranil\\\\Documents\\\\ZEMAX\\\\SAMPLES'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sdir"
    ]
   },
   {
@@ -343,6 +365,66 @@
     "    field = sdata.Fields.AddField(0, 5.0, 1.0)\n",
     "    print('Number of fields =', sdata.Fields.NumberOfFields)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "AddFieldObj = fields.AddField"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "AddFieldObj()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "field_obj = fields.AddField(0, 5.0, 1.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
