--- a/Examples/jupyter_notebooks/00_Enhancing_the_ZOS_API_Interface.ipynb
+++ b/Examples/jupyter_notebooks/00_Enhancing_the_ZOS_API_Interface.ipynb
@@ -84,16 +84,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The PyZOS library provides three functions (instance methods of `OpticalSystem`) for sync-with-ui mechanism: \n",
+    "The PyZOS library provides three functions (instance methods of `OpticalSystem`) for the sync-with-ui mechanism. \n",
+    "The sync-with-ui mechanism may be turned on during the instantiation of the `OpticalSystem` object using the parameter `sync_ui` set to `True` (see the screen-shot video below) or using the method `zSyncWithUI()` of the `OpticalSystem` instance at other times.\n",
     "\n",
-    "* `zPushLens()` -- for copying a lens from the headless ZOS COM server (invisible) to a running user-interface application (visible), and \n",
+    "\n",
+    "The other two functions \n",
+    "\n",
+    "* `zPushLens()` -- for copying a lens from the headless ZOS COM server (invisible) to a running user-interface application (visible) \n",
     "* `zGetRefresh()`-- for copying a lens from the running user-interface application (visible) to the headless ZOS COM server (invisible).\n",
     "\n",
-    "These two functions enables one to interact with a running OpticStudio user-interface. \n",
-    "\n",
-    "The sync-with-ui mechanism may be turned on in two ways -- (1) during the instantiation of the `OpticalSystem` object using the parameter `sync_ui` set to `True` (see the screen-shot video below) or (2) using using the method `zSyncWithUI` of the `OpticalSystem` instance at other time.\n",
-    "\n",
-    "\n",
+    "enable the user to interact with a running OpticStudio user-interface and observe the changes made through the API instantly in the user-interface. \n",
     "\n",
     "(If you cannot see the video in the frame below, or if the resolution is not good enough within this notebook, here is a direct link to the Youtube video: https://www.youtube.com/watch?v=ot5CrjMXc_w&feature=youtu.be)"
    ]
